; ModuleID = '/home/carl/AnghaBench/zfs/cmd/zdb/extr_zdb.c_get_unflushed_alloc_space.c'
source_filename = "/home/carl/AnghaBench/zfs/cmd/zdb/extr_zdb.c_get_unflushed_alloc_space.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@dump_opt = common dso_local global i64* null, align 8
@count_unflushed_space_cb = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*)* @get_unflushed_alloc_space to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @get_unflushed_alloc_space(i32* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32*, align 8
  %4 = alloca i32, align 4
  store i32* %0, i32** %3, align 8
  %5 = load i64*, i64** @dump_opt, align 8
  %6 = getelementptr inbounds i64, i64* %5, i64 76
  %7 = load i64, i64* %6, align 8
  %8 = icmp ne i64 %7, 0
  br i1 %8, label %9, label %10

9:                                                ; preds = %1
  store i32 0, i32* %2, align 4
  br label %15

10:                                               ; preds = %1
  store i32 0, i32* %4, align 4
  %11 = load i32*, i32** %3, align 8
  %12 = load i32, i32* @count_unflushed_space_cb, align 4
  %13 = call i32 @iterate_through_spacemap_logs(i32* %11, i32 %12, i32* %4)
  %14 = load i32, i32* %4, align 4
  store i32 %14, i32* %2, align 4
  br label %15

15:                                               ; preds = %10, %9
  %16 = load i32, i32* %2, align 4
  ret i32 %16
}

declare dso_local i32 @iterate_through_spacemap_logs(i32*, i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
